Service Mesh Patterns/examples/kubernetes-linkerd-bun/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-mesh
  annotations:
    linkerd.io/inject: enabled
