Service Mesh Patterns/examples/kubernetes-linkerd-bun/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: canary-mesh
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mesh-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
